--- a/client/templates/inputsView.html
+++ b/client/templates/inputsView.html
@@ -2,6 +2,8 @@
   <input ng-model="childName" type="text" placeholder="childName">
   <input ng-model="item1" type="text" placeholder="item1">
   <input ng-click="post()" type="submit" value="Submit">
-  <input ng-click="get()" type="button" value="GET">
-  <h2 ng-show="data" ng-repeat="item in data">{{item.name}} wants a {{item.items}}</h2>
+  <input ng-click="get()" type="button" value="Click here see what's in the temporary database!">
+  <h2 ng-show="children" ng-repeat="child in children">{{child.name}} wants a {{child.items}} 
+    <input ng-click="pledge()" type="button" value="Pledge"/>
+  </h2>
 </div>
