--- a/client/templates/donorView.html
+++ b/client/templates/donorView.html
@@ -11,10 +11,11 @@
   <ul ng-repeat="child in children">
     <h3>{{child.childData.name}} wants a </h3>
     <li ng-repeat="itemIndex in child.childData.items">
-  <!-- created pledge button for each child (pledge() not made yet) -->
+      <!-- shows each item in child's item array -->
       {{itemIndex.item}} 
+      <!-- using ng-show/ng-hide, buttons show as Pledge or Pledged based on the item's status  -->
       <input ng-hide="itemIndex.pledged" ng-click="pledge(child, $index)" type="button" value="Pledge"/>
-      <input ng-show="itemIndex.pledged" type="button" disabled="disabled" value="Pledged!"/>
+      <input ng-show="itemIndex.pledged" type="button" disabled="disabled" value="Pledged"/>
     </li>
   </ul>
 
