Organized format of ul/li

--- a/client/templates/donorView.html
+++ b/client/templates/donorView.html
@@ -1,4 +1,4 @@
-<div ng-controller="inputController">
+<div>
 
   <br/>
 
@@ -9,15 +9,17 @@
 
   <!-- shows children -->
   <ul ng-repeat="child in children">
-    <h3>{{child.childData.name}} wants a </h3>
-    <li ng-repeat="itemIndex in child.childData.items">
+    {{child.childData.name}}'s wishlist:
+    <div ng-repeat="itemIndex in child.childData.items">
       <!-- shows each item in child's item array -->
-      {{itemIndex.item}} 
-      <!-- using ng-show/ng-hide, buttons show as Pledge or Pledged based on the item's status  -->
-      <input ng-hide="itemIndex.pledged" ng-click="pledge(child, $index)" type="button" value="Pledge"/>
-      <input ng-show="itemIndex.pledged" type="button" disabled="disabled" value="Pledged"/>
-    </li>
+      <li style="margin-left: 20px">{{itemIndex.item}}
+        <!-- using ng-show/ng-hide, buttons show as Pledge or Pledged based on the item's status  -->
+        <input ng-hide="itemIndex.pledged" ng-click="pledge(child, $index)" type="button" value="Pledge"/>
+        <input ng-show="itemIndex.pledged" type="button" disabled="disabled" value="Pledged"/>
+      </li>
+    </div>
   </ul>
 
-
 </div>
+
+
