created view to create tag; added /create route to ui-router; changed buttons to ui-sref links

--- a/client/templates/workerView.html
+++ b/client/templates/workerView.html
@@ -6,8 +6,8 @@
 
   <!-- input fields -->
   <div class="center">
-    <input type="button" name="createChild" value="Create New Child Tag">
-    <input type="button" name="UpdateChild" value="Update Existing Child Tag">
+    <a ui-sref="createTag">Create New Child Tag</a>
+    <a ui-sref="updateTag">Update Existing Child Tag</a>
   </div>
 
   <br/>
