--- a/client/templates/childInputView.html
+++ b/client/templates/childInputView.html
@@ -8,19 +8,19 @@
   <input type="text" name="superFirstName" placeholder="Supervisor's First Name"><br/>
   <input type="text" name="superLastName" placeholder="Supervisor's Last Name"><br/>
   <input type="text" name="caseNum" placeholder="Case Number"><br/>
-  <input type="text" name="childFirstName" placeholder="Child's First Name"><br/>
+  <input ng-model="childName" type="text" name="childFirstName" placeholder="Child's First Name"><br/>
   <input type="text" name="childLastName" placeholder="Child's Last Name"><br/>
   <input type="text" name="childPhone" placeholder="Child's Phone"><br/>
   <input type="text" name="childGender" placeholder="Child's Gender"><br/>
   <input type="text" name="childDOB" placeholder="Child's DOB"><br/>
   <input type="text" name="childAge" placeholder="Child's Age"><br/>
   <input type="text" name="childLoc" placeholder="Child's Location"><br/>
-  <input type="text" name="item1" placeholder="First Item"><br/>
+  <input ng-model="item1" type="text" name="item1" placeholder="First Item"><br/>
   <input type="text" name="item2" placeholder="Second Item"><br/>
   <input type="text" name="item3" placeholder="Third Item"><br/>
   <input type="text" name="blurb" placeholder="Blurb"><br/>
 
-  <input type="button" name="submit" value="Submit">
+  <input ng-click="post()" type="button" name="submit" value="Submit">
   <br/>
   <br/>
   <a ui-sref="workersPortal">Back</a>
