installed underscore (bower); added create new child tag button; edited childrenFeedView.html

--- a/client/templates/workerView.html
+++ b/client/templates/workerView.html
@@ -6,17 +6,8 @@
 
   <!-- input fields -->
   <div class="center">
-    <a ui-sref="createTag">Create New Child Tag</a>
-    <a ui-sref="updateTag">Update Existing Child Tag</a>
+    <button ui-sref="createTag">Create New Child Tag</button><br/>
   </div>
-
-  <br/>
-  <!-- old -->
-  <!-- <input ng-model="childName" type="text" placeholder="childName"> -->
-  <!-- <input ng-model="item1" type="text" placeholder="item1"> -->
-
-  <!-- click handler for POST -->
-  <!-- <input ng-click="post()" type="submit" value="Submit"> -->
 
 
 </div>
