Add signedIn helper function for donors

--- a/client/templates/authTemplates/donorLoginView.html
+++ b/client/templates/authTemplates/donorLoginView.html
@@ -4,3 +4,5 @@
   <input placeholder="confirm password" type="password" ng-model="passwordConfirmation">
   <input type="submit">
 </form>
+
+<button ng-click="signedIn()">Signed In?</button>
