Implement password reset functionality minus emails

--- a/client/templates/authTemplates/donorSignUpView.html
+++ b/client/templates/authTemplates/donorSignUpView.html
@@ -1,5 +1,6 @@
 <form ng-submit="signupUser()">
   <input placeholder="email address" type="email" ng-model="email">
   <input placeholder="password" type="password" ng-model="password">
+  <input placeholder="password confirmation" type="password" ng-model="passwordConfirmation">
   <input type="submit">
 </form>
