updates .name to .firstName in views; separated feedviews from donor view

--- a/client/templates/workerChildrenFeedView.html
+++ b/client/templates/workerChildrenFeedView.html
@@ -6,11 +6,11 @@
   </div>
   <!-- child's name -->
   <div>
-    {{child.child.name}}
+    {{child.child.firstName}}
   </div>
   <!-- child's location -->
   <div>
-    {{child.child.name}}'s Location
+    {{child.child.firstName}}'s Location
   </div>
   <!-- blurb about child -->
   <div>
