non-authorized users can't access protected resources

--- a/client/templates/userViews/workerView.html
+++ b/client/templates/userViews/workerView.html
@@ -1,4 +1,4 @@
-<div>
+<div worker-verify>
  
   <br/>
 
@@ -7,6 +7,9 @@
   <!-- input fields -->
   <div class="center">
     <button ui-sref="createTag">Create New Child Tag</button><br/>
+    <div ng-controller="authController">
+      <input ng-click="signout()" type="button" value="Sign Out"/>
+    </div>
   </div>
 
 
