added signout button on donor's portal

--- a/client/templates/userViews/donorView.html
+++ b/client/templates/userViews/donorView.html
@@ -3,6 +3,8 @@
   <br/>
 
   <h2 class="center">Donor's Portal</h2>
-
+  <div ng-controller="authController">
+    <input ng-click="signout()" type="button" value="Sign Out"/>
+  </div>
 
 </div>
