routes are protected and get reqeuests only occur if authorized

--- a/client/templates/developerViews/navMenu.html
+++ b/client/templates/developerViews/navMenu.html
@@ -1,5 +1,5 @@
 <div>
   (This menu will be removed:)  
-  <a ui-sref="donorsPortal">Donor's Portal</a>
+  <a ui-sref="/">Donor's Portal</a>
   <a ui-sref="workersPortal">Worker's Portal</a>
 </div>  
