--- a/client/templates/userViews/donorView.html
+++ b/client/templates/userViews/donorView.html
@@ -1,10 +1,9 @@
 <div donor-verify>
- 
-  <br/>
 
-  <h2 class="center">Donor's Portal</h2>
-  <div ng-controller="authController">
+  <h2>Donor's Portal</h2>
+  <div ng-controller="authController" class="center">
     <input ng-click="signout()" type="button" value="Sign Out"/>
   </div>
 
 </div>
+
