updated Children View

--- a/client/templates/userViews/donorChildrenFeedView.html
+++ b/client/templates/userViews/donorChildrenFeedView.html
@@ -1,4 +1,4 @@
-<div donor-verify>
+<div>
 
   <div class="center box lg" ng-repeat="child in children">
     <img src="http://cdn.mhpbooks.com/uploads/2013/10/Success-Kid.jpg" alt="some kid">
