--- a/client/templates/userViews/donorView.html
+++ b/client/templates/userViews/donorView.html
@@ -1,9 +1,6 @@
-<div donor-verify>
+<div>
 
   <h2>Donor's Portal</h2>
-  <div ng-controller="authController" class="center">
-    <input ng-click="signout()" type="button" value="Sign Out"/>
-  </div>
 
 </div>
 
