Added createChildTag.html view in templates/workers/; added button to crate child tags in workers.account view

--- a/client/templates/userViews/workerChildrenFeedView.html
+++ b/client/templates/userViews/workerChildrenFeedView.html
@@ -1,4 +1,4 @@
-<div worker-verify>
+<div>
   <h2 class="center">Children</h2>
   <!-- shows children -->
   <div class="center box lg" ng-repeat="child in children">
