--- a/client/templates/userViews/workerView.html
+++ b/client/templates/userViews/workerView.html
@@ -1,4 +1,5 @@
-<div worker-verify>
+<h1>worker view</h1>
+<div>
  
   <br/>
 
@@ -7,9 +8,6 @@
   <!-- input fields -->
   <div class="center">
     <button ui-sref="createTag">Create New Child Tag</button><br/>
-    <div ng-controller="authController">
-      <input ng-click="signout()" type="button" value="Sign Out"/>
-    </div>
   </div>
 
 
