--- a/client/templates/workers/createChildTag.html
+++ b/client/templates/workers/createChildTag.html
@@ -1,5 +1,5 @@
 <div>
-<h1>DEPRECATED VIEW -- OKAY TO DELETE</h1>
+
 <!-- child data -->
   <div class="box xs center">
     <h2>Child Info</h2>
@@ -194,7 +194,7 @@
     value="Submit"/>
     <br/>
     <br/>
-    <a ui-sref="workersPortal">Back</a>
+    <a ui-sref="workers.account">Back</a>
   </div>
   
 </div>
