added workers/childrenFeed.html view;  added button to see worker's created children tags

--- a/client/templates/workers/account.html
+++ b/client/templates/workers/account.html
@@ -1,3 +1,4 @@
 <h1>Worker Account</h1>
 <input type="button" ui-sref=".create" name="" value="Create New Child Tag">
+<input type="button" ui-sref=".myTags" name="" value="My Children Tags">
 <div ui-view></div>
