--- a/client/templates/workers/account.html
+++ b/client/templates/workers/account.html
@@ -1,4 +1,13 @@
+<nav class="navbar navbar-inverse navbar-fixed-top">
+  <div class="container">
+    <a ui-sref="home" class="navbar-brand">Back To Root</a>
+    <ul class="nav navbar-nav">
+      <li><a ui-sref="workers.account">My Account</a></li>
+      <li><a ui-sref=".myTags">My Children Tags</a></li>
+      <li><a ui-sref=".create">Create Child Tag</a></li>
+      <li><a href="#" ng-click="signout()">Signout</a></li>
+    </ul>
+  </div>
+</nav>
 <h1>Worker Account</h1>
-<input type="button" ui-sref=".create" name="" value="Create New Child Tag">
-<input type="button" ui-sref=".myTags" name="" value="My Children Tags">
 <div ui-view></div>
