--- a/client/templates/workers/account.html
+++ b/client/templates/workers/account.html
@@ -2,7 +2,7 @@
   <div class="container">
     <a ui-sref="home" class="navbar-brand">Back To Root</a>
     <ul class="nav navbar-nav">
-      <li><a ui-sref="workers.account">My Account</a></li>
+      <li><a ui-sref=".myAccount">My Account</a></li>
       <li><a ui-sref=".myTags">My Children Tags</a></li>
       <li><a ui-sref=".create">Create Child Tag</a></li>
       <li><a href="#" ng-click="signout()">Signout</a></li>
